Little changes on dataset creation

--- a/AI_project.ipynb
+++ b/AI_project.ipynb
@@ -30,10 +30,10 @@
       "execution_count": 24,
       "metadata": {
         "id": "NLSwyNFwHXUQ",
-        "outputId": "fadc7d58-ff25-4ace-d4cd-17be1e4ec047",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fadc7d58-ff25-4ace-d4cd-17be1e4ec047"
       },
       "outputs": [
         {
@@ -1011,14 +1011,11 @@
         "\n",
         "\n",
         "def create_dataset(n_samples, images_centroids, density_values, n_inclinations):\n",
-        "  i = 0\n",
         "  dataset_list = []\n",
-        "\n",
-        "  while i < n_samples:\n",
+        "  for i in range(len(images_centroids)):\n",
         "    list_tmp = []\n",
-        "\n",
-        "    for centroid in images_centroids:\n",
-        "      for (x,y) in centroid:\n",
+        "    for centroid in images_centroids[i]:\n",
+        "      for x,y in centroid:\n",
         "        list_tmp.append(normalize(x, min_x_coordinates, max_x_coordinates))\n",
         "        list_tmp.append(normalize(y, min_y_coordinates, max_y_coordinates))\n",
         "\n",
@@ -1058,7 +1055,7 @@
         "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
         "\n",
         "# Prepare dataset\n",
-        "trainset = create_dataset(100, list_centroids_rel, list_densities, list_densities)\n",
+        "trainset = create_dataset(100, list_centroids_rel, list_densities, list_densities) # substitute 100 with the real number of samples, and check for list_densities\n",
         "'''\n",
         "transform = transforms.Compose([transforms.ToTensor(), transforms.Normalize((0.5,), (0.5,)),])\n",
         "trainset = datasets.MNIST('~/.pytorch/MNIST_data/', download=True, train=True, transform=transform)\n",
@@ -1080,6 +1077,7 @@
         "'''\n",
         "\n",
         "# Train the model\n",
+        "'''\n",
         "epochs = 5 # Number of times to train data\n",
         "for e in range(epochs):\n",
         "    for features, labels in trainloader:\n",
@@ -1088,7 +1086,8 @@
         "        loss = criterion(output, labels) # Loss  Caluclation\n",
         "        loss.backward() # Pass loss function gradients to pervious layers:\n",
         "        optimizer.step() # Update Weights\n",
-        "    print(loss.item()) # print loss for each epoch"
+        "    print(loss.item()) # print loss for each epoch\n",
+        "'''"
       ],
       "metadata": {
         "id": "KNvh-lr3onFu",
@@ -1096,20 +1095,20 @@
           "base_uri": "https://localhost:8080/",
           "height": 361
         },
-        "outputId": "d34786a4-e1cc-46a0-b4da-c6a327d1b2c1"
+        "outputId": "70fbbcb2-aa06-492e-9d2a-0a71724fc248"
       },
-      "execution_count": 36,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "error",
-          "ename": "KeyboardInterrupt",
+          "ename": "TypeError",
           "evalue": "ignored",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-36-0b4d5b8e841b>\u001b[0m in \u001b[0;36m<cell line: 95>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     93\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     94\u001b[0m \u001b[0;31m# Prepare dataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 95\u001b[0;31m \u001b[0mtrainset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist_centroids_rel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist_densities\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist_densities\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     96\u001b[0m '''\n\u001b[1;32m     97\u001b[0m \u001b[0mtransform\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtransforms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCompose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtransforms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mToTensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtransforms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mNormalize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-36-0b4d5b8e841b>\u001b[0m in \u001b[0;36mcreate_dataset\u001b[0;34m(n_samples, images_centroids, density_values, n_inclinations)\u001b[0m\n\u001b[1;32m     54\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mcentroid\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mimages_centroids\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m       \u001b[0;32mfor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcentroid\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 56\u001b[0;31m         \u001b[0mlist_tmp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnormalize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmin_x_coordinates\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_x_coordinates\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     57\u001b[0m         \u001b[0mlist_tmp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnormalize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmin_y_coordinates\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_y_coordinates\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-62-6146902f3184>\u001b[0m in \u001b[0;36m<cell line: 92>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     90\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[0;31m# Prepare dataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 92\u001b[0;31m \u001b[0mtrainset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist_centroids_rel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist_densities\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist_densities\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# substitute 100 with the real number of samples, and check for list_densities\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     93\u001b[0m '''\n\u001b[1;32m     94\u001b[0m \u001b[0mtransform\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtransforms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCompose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtransforms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mToTensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtransforms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mNormalize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-62-6146902f3184>\u001b[0m in \u001b[0;36mcreate_dataset\u001b[0;34m(n_samples, images_centroids, density_values, n_inclinations)\u001b[0m\n\u001b[1;32m     50\u001b[0m     \u001b[0mlist_tmp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mcentroid\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mimages_centroids\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 52\u001b[0;31m       \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcentroid\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     53\u001b[0m         \u001b[0mlist_tmp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnormalize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmin_x_coordinates\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_x_coordinates\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m         \u001b[0mlist_tmp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnormalize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmin_y_coordinates\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_y_coordinates\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: cannot unpack non-iterable int object"
           ]
         }
       ]
@@ -1120,11 +1119,11 @@
         "pdb on"
       ],
       "metadata": {
-        "id": "aSztbiP4OLVS",
-        "outputId": "c60811b3-cd55-4c00-b002-f4a1fc60936d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aSztbiP4OLVS",
+        "outputId": "c60811b3-cd55-4c00-b002-f4a1fc60936d"
       },
       "execution_count": 25,
       "outputs": [
@@ -1143,11 +1142,11 @@
         "pdb off"
       ],
       "metadata": {
-        "id": "hfRnQsXbP1gV",
-        "outputId": "19ceb47e-a071-4a4e-a8c0-cf3a7860df6c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hfRnQsXbP1gV",
+        "outputId": "19ceb47e-a071-4a4e-a8c0-cf3a7860df6c"
       },
       "execution_count": 31,
       "outputs": [
