--- a/AI_project.ipynb
+++ b/AI_project.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,8 +12,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -29,10 +27,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "NLSwyNFwHXUQ",
-        "outputId": "ac2a7743-3fbf-4dba-fbcd-69bf17616947",
+        "outputId": "7e0a2030-b54f-4e1a-e309-cabbc175a984",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -42,10 +40,10 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m8.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m8.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting torchmetrics\n",
             "  Downloading torchmetrics-1.1.2-py3-none-any.whl (764 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m764.8/764.8 kB\u001b[0m \u001b[31m7.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m764.8/764.8 kB\u001b[0m \u001b[31m6.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: numpy>1.20.0 in /usr/local/lib/python3.10/dist-packages (from torchmetrics) (1.23.5)\n",
             "Requirement already satisfied: torch>=1.8.1 in /usr/local/lib/python3.10/dist-packages (from torchmetrics) (2.0.1+cu118)\n",
             "Collecting lightning-utilities>=0.8.0 (from torchmetrics)\n",
@@ -155,11 +153,11 @@
         "id": "PZG8udJCP8HY",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 508
+          "height": 510
         },
-        "outputId": "86ffa060-7a0a-4225-b84a-977ead0e1633"
+        "outputId": "c5eb5186-4b5e-4d64-da6c-6cd88c39e24f"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -172,7 +170,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 561753746/561753746 [00:05<00:00, 101597796.70it/s]\n"
+            "100%|██████████| 561753746/561753746 [00:09<00:00, 62000135.67it/s]\n"
           ]
         },
         {
@@ -209,35 +207,16 @@
     {
       "cell_type": "code",
       "source": [
-        "\"\"\"print(tr_images)\n",
+        "print(tr_images)\n",
         "print(tr_images.size())\n",
         "print(tr_images[0])\n",
-        "print(tr_images[0].size())\"\"\""
+        "print(tr_images[0].size())"
       ],
       "metadata": {
-        "id": "tNqiXFct9jI_",
-        "outputId": "a2edc495-c29c-47d6-ed0d-d0d9662f0b61",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
+        "id": "tNqiXFct9jI_"
       },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'print(tr_images)\\nprint(tr_images.size())\\nprint(tr_images[0])\\nprint(tr_images[0].size())'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 4
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -246,13 +225,13 @@
       ],
       "metadata": {
         "id": "2QiklEyX8Ac8",
-        "outputId": "752b6743-92b9-453b-da57-f9d474091e40",
+        "outputId": "2e4d75fc-3292-4947-9271-cd2628353b7f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
         }
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -296,13 +275,13 @@
       ],
       "metadata": {
         "id": "Yoxr6ef7_TZS",
-        "outputId": "68eb17e9-e3dd-4df8-c2aa-f5964e7e9a69",
+        "outputId": "f9d5570f-81e1-44f7-bc77-62f393bfd057",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
         }
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -466,12 +445,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 810
+          "height": 812
         },
         "id": "VT2WVlGzjwxH",
-        "outputId": "25950a16-1ee3-4365-b452-79a20159840d"
+        "outputId": "9bac5764-2e7b-4534-fcbe-45d955cf71e2"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -494,7 +473,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 6
         },
         {
           "output_type": "display_data",
@@ -530,9 +509,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "r2rMMBxwBdot",
-        "outputId": "c37421a8-ed0e-4934-caab-c51e62c0d341"
+        "outputId": "45104d0b-18ac-4fc6-e9bd-cf9a1be09f79"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -551,13 +530,13 @@
       ],
       "metadata": {
         "id": "rVu4d6qVOTd5",
-        "outputId": "6b01a116-0c1d-4da4-a9a8-ec3f369f5cbb",
+        "outputId": "6390ebfc-114f-4389-9ad6-1a9ee9b1f7bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 406
         }
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -591,13 +570,13 @@
       ],
       "metadata": {
         "id": "uGGgy_OfB7p6",
-        "outputId": "0a215f30-28a0-415c-fb83-5b7301d622a0",
+        "outputId": "dac0b971-176b-400f-8396-8289002ca037",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 687
         }
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -639,12 +618,12 @@
       ],
       "metadata": {
         "id": "ERQcbDmlMhB3",
-        "outputId": "5966ef73-0aa5-4cb7-9a7c-f6c7abfb6611",
+        "outputId": "af4911ff-5c15-4abd-ec6c-db17bc95263f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -663,13 +642,13 @@
       ],
       "metadata": {
         "id": "wGj6QagOOIDm",
-        "outputId": "50d1f882-7489-427f-d84e-fe02939d330c",
+        "outputId": "12d76c80-499c-4c6a-ff02-0eafdbfad4b8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 406
         }
       },
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -835,13 +814,13 @@
       ],
       "metadata": {
         "id": "iSSjZvvRCUR8",
-        "outputId": "da90cf0c-b307-448d-df78-87e38e5f10d5",
+        "outputId": "4d702b71-6978-40f1-a7e1-758344b1cd4a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 766
+          "height": 767
         }
       },
-      "execution_count": 15,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -932,7 +911,7 @@
       "metadata": {
         "id": "a6wYHSlW6TIi"
       },
-      "execution_count": 21,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -996,7 +975,7 @@
       "metadata": {
         "id": "KNvh-lr3onFu"
       },
-      "execution_count": 22,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -1017,19 +996,20 @@
         "from torch.utils.data import Dataset\n",
         "\n",
         "class CustomDataset(Dataset):\n",
-        "  def __init__(self, tensor):\n",
-        "    self.tensor = tensor\n",
+        "  def __init__(self, features, labels):\n",
+        "    self.features = features\n",
+        "    self.labels=labels\n",
         "\n",
         "  def __len__(self):\n",
-        "    return self.tensor.size()[0]\n",
+        "    return len(self.labels)\n",
         "\n",
         "  def __getitem__(self, idx):\n",
-        "    #return tensor[0][idx],"
+        "    return self.features[idx], self.labels[idx]"
       ],
       "metadata": {
         "id": "PUprC2sZksY1"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -1050,7 +1030,7 @@
         "  return (value - min) / (max - min)\n",
         "\n",
         "\n",
-        "def create_dataset(n_samples, images_centroids, density_values, n_inclinations, labels):\n",
+        "def create_dataset(n_samples, images_centroids, density_values, n_inclinations):\n",
         "  dataset_list = []\n",
         "  for i in range(len(images_centroids)):\n",
         "    list_tmp = []\n",
@@ -1064,7 +1044,7 @@
         "    for n_inclination in n_inclinations[i]:\n",
         "      list_tmp.append(normalize(n_inclination, min_n_inclinations, max_n_inclinations))\n",
         "\n",
-        "    dataset_list.append([list_tmp, labels[i]])\n",
+        "    dataset_list.append(list_tmp)\n",
         "\n",
         "  return torch.tensor(dataset_list)\n",
         "\n",
@@ -1084,11 +1064,12 @@
         "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
         "\n",
         "# Prepare dataset\n",
-        "trainset = create_dataset(len(list_centroids_rel), list_centroids_rel, list_densities, list_inclinations, labels) # Check for list_inclinations\n",
+        "features = create_dataset(len(list_centroids_rel), list_centroids_rel, list_densities, list_inclinations) # Check for list_inclinations\n",
         "'''\n",
         "transform = transforms.Compose([transforms.ToTensor(), transforms.Normalize((0.5,), (0.5,)),])\n",
         "trainset = datasets.MNIST('~/.pytorch/MNIST_data/', download=True, train=True, transform=transform)\n",
         "'''\n",
+        "trainset=CustomDataset(features, labels)\n",
         "trainloader = torch.utils.data.DataLoader(trainset, batch_size=64, shuffle=False) # trainloader is what holds the data loader object which takes care of shuffling the data and constructing the batches\n",
         "'''\n",
         "testset = datasets.MNIST('~/.pytorch/MNIST_data/', download=True, train=False, transform=transform)\n",
@@ -1097,25 +1078,26 @@
       ],
       "metadata": {
         "id": "Hnwe-aDQrsPv",
-        "outputId": "f01d083b-c89e-4434-a5c9-e7ac26699468",
+        "outputId": "5d271d86-406d-4146-eebd-8e090e5804bc",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 361
+          "height": 53
         }
       },
-      "execution_count": 23,
+      "execution_count": 17,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-23-245f07ac9602>\u001b[0m in \u001b[0;36m<cell line: 41>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0;31m# Prepare dataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 41\u001b[0;31m \u001b[0mtrainset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist_centroids_rel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist_centroids_rel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist_densities\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist_inclinations\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# Check for list_inclinations\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     42\u001b[0m '''\n\u001b[1;32m     43\u001b[0m \u001b[0mtransform\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtransforms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCompose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtransforms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mToTensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtransforms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mNormalize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-23-245f07ac9602>\u001b[0m in \u001b[0;36mcreate_dataset\u001b[0;34m(n_samples, images_centroids, density_values, n_inclinations, labels)\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0mdataset_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlist_tmp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: not a sequence"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "\"\\ntestset = datasets.MNIST('~/.pytorch/MNIST_data/', download=True, train=False, transform=transform)\\ntestloader = torch.utils.data.DataLoader(testset, batch_size=64, shuffle=False) # No need to shuffle test data.\\n\""
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 17
         }
       ]
     },
